--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Quiz questions box -->
     <div class="quiz_box js-quiz-box">
     </div>
-
+<!--NICE PROJECT-->
     <!-- Result Box -->
     <div class="result_box js-result-box">
         <div class="icon">
